feat: cgo enabled

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,8 @@ lint-code:
 # Job para executar os testes da aplicação
 run-tests:
   stage: test
+  environment:
+    CGO_ENABLED: "1"
   script:
     - echo "Running tests..."
     - go test -v ./... # O -v mostra o resultado de todos os testes
