feat: echo docker pass

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,8 @@ build-and-push-image:
   services:
     - docker:28.3.1-dind
   before_script:
-    # Faz login no GitLab Container Registry usando variáveis de ambiente seguras fornecidas pelo GitLab
+    # Faz login no Docker Hub usando variáveis de ambiente seguras fornecidas pelo GitLab
+    - echo "$DOCKER_PASS"
     - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
   script:
     - echo "Construindo a imagem Docker..."
