--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,8 @@ run-tests:
 # Job para construir a imagem Docker e enviá-la para o GitLab Container Registry
 build-and-push-image:
   stage: build
+  tags:
+    - gitlab-org-docker
   # Usa a imagem oficial do Docker para executar comandos docker
   image: docker:24.0.5
   # Requer que o serviço Docker-in-Docker esteja disponível
