--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,14 +53,14 @@ build-and-push-image:
   # Usa a imagem oficial do Docker para executar comandos docker
   image: quay.io/buildah/stable
   before_script:
-    - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+    - echo "$DOCKER_PASS" | buildah login -u "$DOCKER_USER" --password-stdin
   script:
     - echo "Construindo a imagem Docker..."
     # Constrói a imagem Docker usando o Dockerfile da aplicação.
     - buildah build -t "$DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG" .
     - echo "Enviando a imagem para o Docker Hub..."
     # Envia a imagem construída para o repositório do Docker Hub.
-    - buildah push "$DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG"
+    - buildah push "docker.io/$DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG"
 
 # Job para acionar o deploy no Render
 deploy-to-render:
