--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,20 +48,19 @@ build-and-push-image:
   stage: build
   tags:
     - gitlab-org-docker
-  variables:
-    BUILDAH_FORMAT: docker
-    STORAGE_DRIVER: vfs
   # Usa a imagem oficial do Docker para executar comandos docker
-  image: quay.io/buildah/stable
+  image: docker:24.0.5
+  services:
+    - docker:24.0.5
   before_script:
-    - echo "$DOCKER_PASS" | buildah login -u "$DOCKER_USER" --password-stdin $DOCKER_REGISTRY
+    - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
   script:
     - echo "Construindo a imagem Docker..."
     # Constrói a imagem Docker usando o Dockerfile da aplicação.
-    - buildah build -t "$DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG" .
+    - docker build -t "$DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG" .
     - echo "Enviando a imagem para o Docker Hub..."
     # Envia a imagem construída para o repositório do Docker Hub.
-    - buildah push "docker.io/$DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG"
+    - docker push "$DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG"
 
 # Job para acionar o deploy no Render
 deploy-to-render:
