--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,9 +12,10 @@ stages:
 # Variáveis globais disponíveis para todas as tarefas da pipeline.
 variables:
   # Define o nome da imagem Docker. Use seu usuário do Docker Hub.
-  DOCKER_USER: taotreinatec
-  DOCKER_IMAGE_NAME: $DOCKER_USER/ms-saudacoes-aleatorias
-  DOCKER_REGISTRY: registry.hub.docker.com
+  DOCKER_USER: $CI_REGISTRY_USER
+  DOCKER_PASS: $CI_REGISTRY_PASSWORD
+  DOCKER_IMAGE_NAME: $CI_REGISTRY_IMAGE
+  DOCKER_REGISTRY: $CI_REGISTRY
   # Usa o SHA do commit como tag da imagem para garantir o versionamento.
   DOCKER_IMAGE_TAG: $CI_COMMIT_SHORT_SHA
 
