--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ build-and-push-image:
   # Usa a imagem oficial do Docker para executar comandos docker
   image: docker:24.0.5
   services:
-    - docker:24.0.5
+    - docker:24.0.5-dind
   before_script:
     - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
   script:
