feat: release job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,16 +9,6 @@ stages:
   - build
   - deploy
 
-# Variáveis globais disponíveis para todas as tarefas da pipeline.
-variables:
-  # Define o nome da imagem Docker. Use seu usuário do Docker Hub.
-  DOCKER_USER: $CI_REGISTRY_USER
-  DOCKER_PASS: $CI_REGISTRY_PASSWORD
-  DOCKER_IMAGE_NAME: $CI_REGISTRY_IMAGE
-  DOCKER_REGISTRY: $CI_REGISTRY
-  # Usa o SHA do commit como tag da imagem para garantir o versionamento.
-  DOCKER_IMAGE_TAG: $CI_COMMIT_SHORT_SHA
-
 # Job para verificar formatação e erros comuns no código Go
 lint-code:
   stage: lint
@@ -44,9 +34,25 @@ run-tests:
     - apk add --no-cache build-base gcc
     - CGO_ENABLED=1 go test -v ./... # O -v mostra o resultado de todos os testes
 
-# Job para construir a imagem Docker e enviá-la para o GitLab Container Registry
+release-job:
+  stage: release
+  image: node:18 # Imagem com Node.js e npm para rodar o semantic-release
+  before_script:
+    - npm install -g semantic-release @semantic-release/gitlab @semantic-release/git conventional-changelog-conventionalcommits
+  script:
+    - semantic-release
+  only:
+    - main
+
+# Job para construir a imagem Docker e enviá-la para o Docker Hub
 build-and-push-image:
   stage: build
+  variables:
+    DOCKER_USER: taotreinatec
+    DOCKER_PASS: $DOCKER_PASS
+    DOCKER_IMAGE_NAME: $DOCKER_USER/ms-saudacoes-aleatorias
+    DOCKER_REGISTRY: registry.hub.docker.com
+    DOCKER_IMAGE_TAG: $CI_COMMIT_TAG
   tags:
     - gitlab-org-docker
   # Usa a imagem oficial do Docker para executar comandos docker
@@ -62,6 +68,8 @@ build-and-push-image:
     - echo "Enviando a imagem para o Docker Hub..."
     # Envia a imagem construída para o repositório do Docker Hub.
     - docker push "$DOCKER_IMAGE_NAME:$DOCKER_IMAGE_TAG"
+  only:
+    - main
 
 # Job para acionar o deploy no Render
 deploy-to-render:
