--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,16 @@ run-tests:
     - apk add --no-cache build-base gcc
     - CGO_ENABLED=1 go test -v ./... # O -v mostra o resultado de todos os testes
 
+test-report:
+  stage: test
+  script:
+    - go install gotest.tools/gotestsum@latest
+    - gotestsum --junitfile report.xml --format testname
+  artifacts:
+    when: always
+    reports:
+      junit: report.xml
+
 # Job para construir a imagem Docker e enviá-la para o Docker Hub
 build-and-push-image:
   stage: release
