--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ lint-code:
     - go vet $(go list ./...)
   rules:
     - if: $CI_COMMIT_BRANCH != "main"
-      when: never
+      when: always
 
 golangci-lint:
   stage: build-lint
@@ -41,7 +41,7 @@ golangci-lint:
     - golangci-lint run --verbose
   rules:
     - if: $CI_COMMIT_BRANCH != "main"
-      when: never
+      when: always
 
 run-tests:
   stage: test
