fix(ci): permite execução manual do job destroy-staging via botão

--- a/models/.gitlab-ci.yml
+++ b/models/.gitlab-ci.yml
@@ -135,8 +135,10 @@ destroy-staging:
     - echo "Destruindo a infraestrutura de staging..."
     - terraform destroy -auto-approve
   when: manual
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "main"'
+      when: manual
   dependencies:
     - deploy-to-staging
-  only:
-    - main
+
   
