--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,6 +29,8 @@ jobs:
   build:
     name: Build Code
     runs-on: ubuntu-latest
+    needs:
+    - lint
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
