--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,12 +24,32 @@ jobs:
         echo "Linting code..."
         go fmt $(go list ./...)
         go vet $(go list ./...)
+
+    - name: Run golangci-lint
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: v1.58
+        args: --verbose
   
+  test:
+    name: Test Code
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5    
+
+    - name: Install gotestsum
+      run: go install gotest.tools/gotestsum@latest
+
   build:
     name: Build Code
     runs-on: ubuntu-latest
     needs:
     - lint
+    - test
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
