--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,6 +58,9 @@ jobs:
 
   build-and-push:
     name: Build and Push Docker Image
+    needs:
+      - lint
+      - test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
