--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,8 +10,6 @@ on:
 
 env:
   DOCKER_USER: ozorest84
-  DOCKER_IMAGE_NAME: ozorest84/ms-saudacoes-aleatorias
-  DOCKER_IMAGE_TAG: 1.0.${{ github.run_id }}
   SERVICE_NAME: saudacoes-aleatorias
 
 jobs:
@@ -82,6 +80,9 @@ jobs:
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
+        env:
+          DOCKER_IMAGE_NAME: ${{ env.DOCKER_USER }}/ms-saudacoes-aleatorias
+          DOCKER_IMAGE_TAG: 1.0.${{ github.run_id }}
         with:
           context: .
           platforms: linux/amd64,linux/arm64
