--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,95 +1,115 @@
-name: CI/CD - Saudações Aleatórias
+name: CI/CD - ms-saudacoes-aleatorias
 
 on:
   push:
-    branches:
-      - "*"
-  pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
+  workflow_dispatch:
 
 env:
-  DOCKER_USER: ozorest84
-  SERVICE_NAME: saudacoes-aleatorias
+  IMAGE_NAME: ${{ secrets.DOCKER_USER }}/ms-saudacoes-aleatorias
+  KOYEB_APP: ${{ vars.KOYEB_APP || 'saudacoes-app' }}
+  KOYEB_SERVICE: ${{ vars.KOYEB_SERVICE || 'saudacoes-svc' }}
 
 jobs:
-  lint:
-    name: Lint Code
+  build-lint:
+    name: Lint (golangci-lint)
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Checkout código
         uses: actions/checkout@v4
 
-      - name: Set up Go
+      - name: Setup Go
         uses: actions/setup-go@v5
-
-      - name: Go Fmt & Vet
-        run: |
-          echo "Linting code..."
-          go fmt $(go list ./...)
-          go vet $(go list ./...)
-
-      - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v8
         with:
-          args: --verbose
+          go-version: "1.22"
+
+      - name: Instalar golangci-lint
+        run: go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+
+      - name: Rodar lint
+        run: golangci-lint run ./...
 
   test:
-    name: Test Code
+    name: Testes (go test)
     runs-on: ubuntu-latest
+    needs: build-lint
     steps:
-      - name: Checkout Code
+      - name: Checkout código
         uses: actions/checkout@v4
 
-      - name: Set up Go
+      - name: Setup Go
         uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
 
-      - name: Install gotestsum
-        run: go install gotest.tools/gotestsum@latest
+      - name: Rodar testes
+        run: go test ./... -v
 
-      - name: Run tests and generate report
-        run: |
-          echo "Running tests and generating report..."
-          # CGO_ENABLED=1 é necessário se houver código C, mas requer gcc.
-          # A imagem ubuntu-latest já tem o gcc.
-          CGO_ENABLED=1 gotestsum --junitfile report.xml --format testname
-
-  build-and-push:
-    name: Build and Push Docker Image
-    needs:
-      - lint
-      - test
+  release:
+    name: Build & Push Docker
     runs-on: ubuntu-latest
+    needs: test
+    permissions:
+      contents: read
+      packages: write
     steps:
-      - name: Checkout code
+      - name: Checkout código
         uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        # Essencial para builds multi-plataforma (ex: ARM em runners x86)
-
-      - name: Set up Docker Buildx
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
-        # Cria um builder do Docker que suporta builds multi-plataforma
 
-      - name: Log in to Docker Hub
+      - name: Login no Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ env.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASS }} # Segredo configurado no GitHub
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        env:
-          DOCKER_IMAGE_NAME: ${{ env.DOCKER_USER }}/ms-${{ env.SERVICE_NAME}}
-          DOCKER_IMAGE_TAG: 1.0.${{ github.run_id }}
+      - name: Build & Push imagem
+        uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_TAG }}
-            ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
-            ${{ env.DOCKER_IMAGE_NAME }}:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+            docker.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            docker.io/${{ env.IMAGE_NAME }}:latest
+
+  deploy:
+    name: Deploy no Koyeb
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v4
+
+      - name: Deploy to Koyeb
+        uses: koyeb/action-git-deploy@v1
+        with:
+          api_token: ${{ secrets.KOYEB_TOKEN }}
+          app_name: ${{ env.KOYEB_APP }}
+          service_name: ${{ env.KOYEB_SERVICE }}
+          docker_image: docker.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
+
+    environment:
+      name: production
+      url: https://${{ env.KOYEB_SERVICE }}-${{ env.KOYEB_APP }}.koyeb.app
+
+  cleanup:
+    name: Cleanup Koyeb (manual)
+    runs-on: ubuntu-latest
+    needs: deploy
+    environment:
+      name: cleanup
+    steps:
+      - name: Instalar Koyeb CLI
+        run: |
+          curl -fsSL https://www.koyeb.com/install.sh | bash
+          echo "${{ secrets.KOYEB_TOKEN }}" | /root/.koyeb/bin/koyeb login --token -
+
+      - name: Remover serviço do Koyeb
+        run: |
+          /root/.koyeb/bin/koyeb service delete "${{ env.KOYEB_APP }}/${{ env.KOYEB_SERVICE }}" --yes || true
+
+      - name: Remover app do Koyeb
+        run: |
+          /root/.koyeb/bin/koyeb app delete "${{ env.KOYEB_APP }}" --yes || true
