--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,8 +94,7 @@ jobs:
           service-name: ${{ env.KOYEB_SERVICE }}
           docker: docker.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
-          # ajuste a porta se a sua app Go escuta em outra
-          service-ports: '[{"port":8080,"protocol":"http"}]'
+          service-ports: '[{8080:http}]'
           service-routes: '[{"path":"/","port":8080,"protocol":"http"}]'
 
     environment:
@@ -108,7 +107,6 @@ jobs:
     needs: deploy
     environment:
       name: cleanup
-      # configure o environment cleanup nas settings pra exigir aprovação
     steps:
       - name: Install and configure the Koyeb CLI
         uses: koyeb-community/koyeb-actions@v2
