Fix Koyeb deployment service ports configuration format

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,7 +94,7 @@ jobs:
           service-name: ${{ env.KOYEB_SERVICE }}
           docker: docker.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
-          service-ports: '[{"port":8080, "protocol": "http"}]'
+          service-ports: '[{"8080":"http"}]'
           service-routes: '[{"path":"/","port":8080}]'
 
     environment:
