Add service ports configuration for Koyeb deployment

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,6 +94,8 @@ jobs:
           service-name: ${{ env.KOYEB_SERVICE }}
           docker: docker.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
+          service-ports: 'server:8080'
+
     environment:
       name: production
       url: https://${{ env.KOYEB_SERVICE }}-${{ env.KOYEB_APP }}.koyeb.app
