--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -96,6 +96,7 @@ jobs:
 
           service-ports: '8080:http'
           service-routes: '/:8080'
+          service-checks: '[{"name":"http-check","type":"http","path":"/","port":8080,"interval":"5s","timeout":"2s"}]'
 
     environment:
       name: production
