--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -96,7 +96,7 @@ jobs:
 
           service-ports: '8080:http'
           service-routes: '/:8080'
-          service-checks: '8080:http:/'
+          service-checks: '8080:http:/api/saudacoes/aleatorio'
 
     environment:
       name: production
